feat: support all-account schedule generation