@@ -2,7 +2,12 @@ package de.goaldone.backend.service;
 
 import de.goaldone.backend.entity.UserAccountEntity;
 import de.goaldone.backend.entity.WorkingTimeEntity;
-import de.goaldone.backend.model.*;
+import de.goaldone.backend.model.Appointment;
+import de.goaldone.backend.model.AppointmentListResponse;
+import de.goaldone.backend.model.DayOfWeek;
+import de.goaldone.backend.model.GenerateScheduleRequest;
+import de.goaldone.backend.model.ScheduleResponse;
+import de.goaldone.backend.model.ScheduleWarning;
 import de.goaldone.backend.repository.UserAccountRepository;
 import de.goaldone.backend.scheduler.types.model.SchedulingContext;
 import de.goaldone.backend.scheduler.types.model.TimeSlot;
@@ -16,10 +21,17 @@ import org.springframework.security.oauth2.jwt.Jwt;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.*;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class ScheduleServiceTest {
@@ -64,6 +76,12 @@ public class ScheduleServiceTest {
     // SINGLE ACCOUNT VALIDATION
     // =========================
 
+    private AppointmentListResponse emptyAppointmentResponse() {
+        AppointmentListResponse response = new AppointmentListResponse();
+        response.setAppointments(List.of());
+        return response;
+    }
+
     @Test
     void invalidFromDate_returnsWarning() {
         UUID accountId = UUID.randomUUID();
@@ -71,14 +89,15 @@ public class ScheduleServiceTest {
         GenerateScheduleRequest request = createGenerateScheduleRequest(LocalDate.now().minusDays(1));
 
         UserAccountEntity account = createUserAccount(accountId, "user-1");
+
         when(userAccountRepository.findById(accountId)).thenReturn(Optional.of(account));
         when(userIdentityService.hasUserAccessToAccount(jwt, accountId)).thenReturn(true);
 
         ScheduleResponse response = scheduleService.generateSingleAccountSchedule(jwt, accountId, request, 5000);
 
         assertEquals(1, response.getWarnings().size());
-        ScheduleWarning warning = response.getWarnings().getFirst();
 
+        ScheduleWarning warning = response.getWarnings().get(0);
         assertEquals(ScheduleWarning.TypeEnum.OTHER, warning.getType());
         assertTrue(warning.getMessage().contains("From date cannot be in the past"));
     }
@@ -94,8 +113,8 @@ public class ScheduleServiceTest {
         ScheduleResponse response = scheduleService.generateSingleAccountSchedule(jwt, accountId, request, 5000);
 
         assertEquals(1, response.getWarnings().size());
-        ScheduleWarning warning = response.getWarnings().getFirst();
 
+        ScheduleWarning warning = response.getWarnings().get(0);
         assertEquals(ScheduleWarning.TypeEnum.OTHER, warning.getType());
         assertTrue(warning.getMessage().contains("Account not found"));
     }
@@ -107,14 +126,15 @@ public class ScheduleServiceTest {
         GenerateScheduleRequest request = createGenerateScheduleRequest(LocalDate.now().plusDays(1));
 
         UserAccountEntity account = createUserAccount(accountId, "different-user");
+
         when(userAccountRepository.findById(accountId)).thenReturn(Optional.of(account));
-        when(userIdentityService.hasUserAccessToAccount(jwt, accountId))
-                .thenReturn(false);
+        when(userIdentityService.hasUserAccessToAccount(jwt, accountId)).thenReturn(false);
+
         ScheduleResponse response = scheduleService.generateSingleAccountSchedule(jwt, accountId, request, 5000);
 
         assertEquals(1, response.getWarnings().size());
-        ScheduleWarning warning = response.getWarnings().getFirst();
 
+        ScheduleWarning warning = response.getWarnings().get(0);
         assertEquals(ScheduleWarning.TypeEnum.OTHER, warning.getType());
         assertTrue(warning.getMessage().contains("does not have access"));
     }
@@ -132,9 +152,9 @@ public class ScheduleServiceTest {
                 scheduleService.generateMultiAccountSchedule(jwt, List.of(), request, 5000);
 
         assertEquals(1, responses.size());
-        assertEquals(1, responses.getFirst().getWarnings().size());
+        assertEquals(1, responses.get(0).getWarnings().size());
 
-        ScheduleWarning warning = responses.getFirst().getWarnings().getFirst();
+        ScheduleWarning warning = responses.get(0).getWarnings().get(0);
         assertEquals(ScheduleWarning.TypeEnum.OTHER, warning.getType());
         assertTrue(warning.getMessage().contains("No accounts linked to user"));
     }
@@ -150,19 +170,22 @@ public class ScheduleServiceTest {
         UserAccountEntity validAccount = createUserAccount(validId, "user-1");
 
         when(userAccountRepository.findById(validId)).thenReturn(Optional.of(validAccount));
+        when(userAccountRepository.findByIdWithWorkingTimes(validId)).thenReturn(Optional.of(validAccount));
         when(userAccountRepository.findById(invalidId)).thenReturn(Optional.empty());
         when(userIdentityService.hasUserAccessToAccount(jwt, validId))
                 .thenReturn(true);
         when(taskService.getTasksForAccountId(jwt, validId)).thenReturn(List.of());
+        when(appointmentService.listAppointments(validId, jwt)).thenReturn(emptyAppointmentResponse());
 
         List<ScheduleResponse> responses =
                 scheduleService.generateMultiAccountSchedule(jwt, List.of(validId, invalidId), request, 5000);
 
         assertEquals(2, responses.size());
 
-        // One response should have a warning about the invalid account
         long warnings = responses.stream()
-                .filter(r -> r.getWarnings() != null && !r.getWarnings().isEmpty() && r.getWarnings().getFirst().getMessage().contains("Account not found"))
+                .filter(response -> response.getWarnings() != null)
+                .filter(response -> !response.getWarnings().isEmpty())
+                .filter(response -> response.getWarnings().get(0).getMessage().contains("Account not found"))
                 .count();
 
         assertEquals(1, warnings);
@@ -180,12 +203,14 @@ public class ScheduleServiceTest {
         UserAccountEntity unauthorized = createUserAccount(unauthorizedId, "other-user");
 
         when(userAccountRepository.findById(validId)).thenReturn(Optional.of(valid));
+        when(userAccountRepository.findByIdWithWorkingTimes(validId)).thenReturn(Optional.of(valid));
         when(userAccountRepository.findById(unauthorizedId)).thenReturn(Optional.of(unauthorized));
         when(userIdentityService.hasUserAccessToAccount(jwt, validId))
                 .thenReturn(true);
         when(userIdentityService.hasUserAccessToAccount(jwt, unauthorizedId))
                 .thenReturn(false);
         when(taskService.getTasksForAccountId(jwt, validId)).thenReturn(List.of());
+        when(appointmentService.listAppointments(validId, jwt)).thenReturn(emptyAppointmentResponse());
 
         List<ScheduleResponse> responses =
                 scheduleService.generateMultiAccountSchedule(jwt, List.of(validId, unauthorizedId), request, 5000);
@@ -193,7 +218,9 @@ public class ScheduleServiceTest {
         assertEquals(2, responses.size());
 
         long warnings = responses.stream()
-                .filter(r -> r.getWarnings() != null && !r.getWarnings().isEmpty() && r.getWarnings().getFirst().getMessage().contains("does not have access"))
+                .filter(response -> response.getWarnings() != null)
+                .filter(response -> !response.getWarnings().isEmpty())
+                .filter(response -> response.getWarnings().get(0).getMessage().contains("does not have access"))
                 .count();
 
         assertEquals(1, warnings);
@@ -205,7 +232,7 @@ public class ScheduleServiceTest {
     // ================================
 
     @Test
-    void createSchedulingContext_noWorkingTimes_returnsContextWithoutDefaultWorkingTimes() {
+    void createSchedulingContext_noWorkingTimes_returnsContextWithDefaultWorkingTimes(){
         UUID accountId = UUID.randomUUID();
         Jwt jwt = mockJwt();
         LocalDate fromDate = LocalDate.now().plusDays(1);
@@ -215,9 +242,9 @@ public class ScheduleServiceTest {
         account.setZitadelSub("user-1");
         account.setWorkingTimes(List.of());
 
-        when(userAccountRepository.findById(accountId)).thenReturn(Optional.of(account));
+        when(userAccountRepository.findByIdWithWorkingTimes(accountId)).thenReturn(Optional.of(account));
         when(taskService.getTasksForAccountId(jwt, accountId)).thenReturn(List.of());
-        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(new AppointmentListResponse());
+        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(emptyAppointmentResponse());
 
         SchedulingContext context = scheduleService.createSchedulingContext(jwt, accountId, fromDate, 1);
 
@@ -225,24 +252,30 @@ public class ScheduleServiceTest {
         assertEquals(fromDate, context.fromDate());
 
         WorkingTimeEntity defaultWorkingTimes = new WorkingTimeEntity();
-        defaultWorkingTimes.setDays(Set.of(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY));
+        defaultWorkingTimes.setDays(Set.of(
+                DayOfWeek.MONDAY,
+                DayOfWeek.TUESDAY,
+                DayOfWeek.WEDNESDAY,
+                DayOfWeek.THURSDAY,
+                DayOfWeek.FRIDAY
+        ));
         defaultWorkingTimes.setStartTime(LocalTime.of(8, 0));
         defaultWorkingTimes.setEndTime(LocalTime.of(17, 0));
 
-        assertEquals(context.workingTimes(), List.of(defaultWorkingTimes));
+        assertEquals(List.of(defaultWorkingTimes), context.workingTimes());
     }
 
     @Test
     void createSchedulingContext_noAppointments_returnsFullWorkingHours() {
         UUID accountId = UUID.randomUUID();
         Jwt jwt = mockJwt();
-        LocalDate fromDate = LocalDate.of(2026, 5, 12); // Monday
+        LocalDate fromDate = LocalDate.of(2026, 5, 12);
 
         WorkingTimeEntity workingTime = new WorkingTimeEntity();
         workingTime.setId(UUID.randomUUID());
         workingTime.setStartTime(LocalTime.of(9, 0));
         workingTime.setEndTime(LocalTime.of(17, 0));
-        workingTime.setDays(new HashSet<>(List.of(DayOfWeek.MONDAY)));
+        workingTime.setDays(new HashSet<>(List.of(DayOfWeek.TUESDAY)));
         workingTime.setCreatedAt(Instant.now());
 
         UserAccountEntity account = new UserAccountEntity();
@@ -250,15 +283,17 @@ public class ScheduleServiceTest {
         account.setZitadelSub("user-1");
         account.setWorkingTimes(List.of(workingTime));
 
-        when(userAccountRepository.findById(accountId)).thenReturn(Optional.of(account));
+        when(userAccountRepository.findByIdWithWorkingTimes(accountId)).thenReturn(Optional.of(account));
         when(taskService.getTasksForAccountId(jwt, accountId)).thenReturn(List.of());
-        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(new AppointmentListResponse());
+        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(emptyAppointmentResponse());
 
         SchedulingContext context = scheduleService.createSchedulingContext(jwt, accountId, fromDate, 1);
 
         assertNotNull(context);
         assertFalse(context.availableSlots().isEmpty(), "Should have at least one slot");
-        TimeSlot slot = context.availableSlots().getFirst();
+
+        TimeSlot slot = context.availableSlots().get(0);
+        assertEquals(fromDate, slot.date());
         assertEquals(LocalTime.of(9, 0), slot.startTime());
         assertEquals(LocalTime.of(17, 0), slot.endTime());
     }
@@ -267,7 +302,7 @@ public class ScheduleServiceTest {
     void createSchedulingContext_withAppointments_returnsGapsBetweenAppointments() {
         UUID accountId = UUID.randomUUID();
         Jwt jwt = mockJwt();
-        LocalDate fromDate = LocalDate.of(2026, 5, 11); // Monday
+        LocalDate fromDate = LocalDate.of(2026, 5, 11);
 
         WorkingTimeEntity workingTime = new WorkingTimeEntity();
         workingTime.setId(UUID.randomUUID());
@@ -295,17 +330,28 @@ public class ScheduleServiceTest {
         account.setZitadelSub("user-1");
         account.setWorkingTimes(List.of(workingTime));
 
-        when(userAccountRepository.findById(accountId)).thenReturn(Optional.of(account));
+        when(userAccountRepository.findByIdWithWorkingTimes(accountId)).thenReturn(Optional.of(account));
         when(taskService.getTasksForAccountId(jwt, accountId)).thenReturn(List.of());
         when(appointmentService.listAppointments(accountId, jwt)).thenReturn(appointmentResponse);
 
         SchedulingContext context = scheduleService.createSchedulingContext(jwt, accountId, fromDate, 1);
 
+        List<TimeSlot> slotsForFromDate = context.availableSlots()
+                .stream()
+                .filter(slot -> fromDate.equals(slot.date()))
+                .toList();
+
         assertNotNull(context);
-        // Should have 3 slots: 09:00-10:00, 11:00-14:00, 15:00-17:00
-        assertEquals(3, context.availableSlots().size(), "Should have 3 available slots");
-        assertEquals(LocalTime.of(9, 0), context.availableSlots().getFirst().startTime());
-        assertEquals(LocalTime.of(10, 0), context.availableSlots().getFirst().endTime());
+        assertEquals(3, slotsForFromDate.size(), "Should have 3 available slots on the start date");
+
+        assertEquals(LocalTime.of(9, 0), slotsForFromDate.get(0).startTime());
+        assertEquals(LocalTime.of(10, 0), slotsForFromDate.get(0).endTime());
+
+        assertEquals(LocalTime.of(11, 0), slotsForFromDate.get(1).startTime());
+        assertEquals(LocalTime.of(14, 0), slotsForFromDate.get(1).endTime());
+
+        assertEquals(LocalTime.of(15, 0), slotsForFromDate.get(2).startTime());
+        assertEquals(LocalTime.of(17, 0), slotsForFromDate.get(2).endTime());
     }
 
     @Test
@@ -318,7 +364,11 @@ public class ScheduleServiceTest {
         workingTime.setId(UUID.randomUUID());
         workingTime.setStartTime(LocalTime.of(9, 0));
         workingTime.setEndTime(LocalTime.of(17, 0));
-        workingTime.setDays(new HashSet<>(List.of(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY)));
+        workingTime.setDays(new HashSet<>(List.of(
+                DayOfWeek.MONDAY,
+                DayOfWeek.TUESDAY,
+                DayOfWeek.WEDNESDAY
+        )));
         workingTime.setCreatedAt(Instant.now());
 
         UserAccountEntity account = new UserAccountEntity();
@@ -326,9 +376,9 @@ public class ScheduleServiceTest {
         account.setZitadelSub("user-1");
         account.setWorkingTimes(List.of(workingTime));
 
-        when(userAccountRepository.findById(accountId)).thenReturn(Optional.of(account));
+        when(userAccountRepository.findByIdWithWorkingTimes(accountId)).thenReturn(Optional.of(account));
         when(taskService.getTasksForAccountId(jwt, accountId)).thenReturn(List.of());
-        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(new AppointmentListResponse());
+        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(emptyAppointmentResponse());
 
         SchedulingContext context = scheduleService.createSchedulingContext(jwt, accountId, fromDate, 4);
 
@@ -364,9 +414,9 @@ public class ScheduleServiceTest {
         account.setZitadelSub("user-1");
         account.setWorkingTimes(List.of(workingTime1, workingTime2));
 
-        when(userAccountRepository.findById(accountId)).thenReturn(Optional.of(account));
+        when(userAccountRepository.findByIdWithWorkingTimes(accountId)).thenReturn(Optional.of(account));
         when(taskService.getTasksForAccountId(jwt, accountId)).thenReturn(List.of());
-        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(new AppointmentListResponse());
+        when(appointmentService.listAppointments(accountId, jwt)).thenReturn(emptyAppointmentResponse());
 
         SchedulingContext context = scheduleService.createSchedulingContext(jwt, accountId, fromDate, 4);
 
